--- a/index.html
+++ b/index.html
@@ -8,35 +8,45 @@
   </head>
   <body>
     <nav>
+      <img scr="logo.png" alt="logo">
       <ul class="navarea">
-        <li>
-          <img scr="logo.png" alt="logo-pflanzen">
-        </li>
         <li><a href="#">Startseite</a></li>
         <li><a href="#">Zimmerpflanzen</a></li>
         <li><a href="#">Andere</a></li>
         <li><a href="#">Kontakt</a></li>
       </ul>
     </nav>
+    <header>
+      <div class="brand">Blog der Zimmerpflanzenliebhaber</div>
+    </header>
     <main>
-      <h1>Blog der Zimmerpflanzenliebhaber</h1>
+      <aside>
+        <div class="section">
+          <h3><a href="#">Die besten Pflanzen für deine Gesundheit</a></h3>
+
+        </div>
+      </aside>
       <article class="firstarticle">
         <div class="title1">
           <h2>Ob deine Zimmerpflanzen am besten zu dir passt, was sagt dein Sternzeichen?</h2>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea</p>
-          </div>
-          <div class="para">
+        </div>
+        <div class="para1">
           <img src="https://www.ndr.de/ratgeber/garten/zimmerpflanzen/zimmerpflanzen182_v-fullhd.jpg" alt="zimmerpflanzen">
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         </div>
-        
-    
+        <div class="para2">
+          <img scr="hhttps://cradle-mag.de/assets/images/4/nachhaltige-zimmerpflanzen-Teaser-Nachhaltige-Zimmerpflanzen-401f4ddf.webp" alt="Monstera leaves">
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+
+            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis</p>
+        </div>
       </article>
       <article class="secondarticle">
+  
+
 
       </article>
- 
-
 
     <footer>
       <hr />
@@ -63,7 +73,7 @@
           </div>
           <div class="ftrcol 2">
           <div>
-            <h3>Mini-Pflanzen</h3>
+            <h3><a href="#">Mini-Pflanzen</a></h3>
           </div>
           <div>
             <h3>Palme</h3>
